reduced some padding to avoid word-wrapping. #98.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -228,7 +228,7 @@ body {
 	flex-direction: column;
 	flex-wrap: nowrap;
 	align-items: flex-start;
-	padding-left: 2rem;
+	padding-left: 1.5rem;
 }
 
 /* Resources Links */
